# capital-gains-comparator

./: LICENSE  README.md  calculator.py  pyproject.toml
theInternCalc/: .gitignore
