[project]
name = "theinterncalc"
version = "0.1.0"
description = "Capital gains method comparison (LIFO, FIFO, ACB)."
authors = [
    {name = "William Auclair-Joyet",email = "wajoyet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "logger (>=1.4,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
